Fix issue on Android small screens, name input field is hidden by touch keyboard

--- a/css/styles.css
+++ b/css/styles.css
@@ -688,6 +688,7 @@ input {
 
 .first-namebox {
 	height: 100%;
+	padding-bottom: 100%;
 }
 
 .first-nameline {
